# VHCA_FRFE_PL

Geant4_UniOvi_FPFE/: CMakeLists.txt  README.md  ourmain.cc  plot.py  plotter.py  vis.mac
Geant4_UniOvi_FPFE/histogramas/electron/: Si_elec_100MeV_112um.root  Si_elec_100MeV_112um_edep.xlsx  Si_elec_100MeV_112um_trackL.xlsx  Si_elec_100MeV_22.4um.root  Si_elec_100MeV_22.4um_edep.xlsx  Si_elec_100MeV_22.4um_trackL.xlsx  Si_elec_100MeV_5.6um.root  Si_elec_100MeV_5.6um_1.root  Si_elec_100MeV_5.6um_1_edep.xlsx  Si_elec_100MeV_5.6um_1_trackL.xlsx  Si_elec_100MeV_5.6um_edep.xlsx  Si_elec_100MeV_5.6um_trackL.xlsx  Si_elec_100MeV_56um.root  Si_elec_100MeV_56um_edep.xlsx  Si_elec_100MeV_56um_trackL.xlsx
Geant4_UniOvi_FPFE/histogramas/proton/: Si_prot_12GeV_112um.root  Si_prot_12GeV_112um_edep.xlsx  Si_prot_12GeV_112um_trackL.xlsx  Si_prot_12GeV_22.4um.root  Si_prot_12GeV_22.4um_edep.xlsx  Si_prot_12GeV_22.4um_trackL.xlsx  Si_prot_12GeV_5.6um.root  Si_prot_12GeV_5.6um_edep.xlsx  Si_prot_12GeV_5.6um_trackL.xlsx  Si_prot_12GeV_56um.root  Si_prot_12GeV_56um_edep.xlsx  Si_prot_12GeV_56um_trackL.xlsx
Geant4_UniOvi_FPFE/include/: YourActionInitialization.hh  YourAnalysis.hh  YourDetectorConstruction.hh  YourDetectorMessenger.hh  YourEventAction.hh  YourPrimaryGeneratorAction.hh  YourRunAction.hh  YourSteppingAction.hh
Geant4_UniOvi_FPFE/src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourDetectorMessenger.cc  YourEventAction.cc  YourPrimaryGeneratorAction.cc  YourRunAction.cc  YourSteppingAction.cc
